--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chatscope/chat-ui-kit-react",
+  "name": "@wearemothership/chat-ui-kit-react",
   "version": "2.0.3",
   "description": "React component library for creating chat interfaces",
   "license": "MIT",
@@ -25,7 +25,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/chatscope/chat-ui-kit-react.git"
+    "url": "https://github.com/wearemothership/chat-ui-kit-react.git"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -81,10 +81,12 @@
     "build:esm": "BABEL_ENV=esm babel src/components -d dist/es",
     "build": "yarn run build:clean && yarn run build:esm && yarn run build:cjs && yarn run build:umd",
     "pack": "yarn pack",
-    "watch": "chokidar 'src/**/*.*' -c 'yarn run build:esm'"
+    "watch": "chokidar 'src/**/*.*' -c 'yarn run build:esm'",
+    "prepare": "husky",
+	"lint-staged": "lint-staged"
   },
   "dependencies": {
-    "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@wearemothership/chat-ui-kit-styles": "^1.5.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -92,12 +94,10 @@
     "classnames": "^2.5.1",
     "prop-types": "^15.7.2"
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
-  },
+  "author": "supersnager <supersnager@gmail.com> (https://chatscope.io)",
+  "contributors": [
+    "vespasianvs <andy@wearemothership.com> (https://wearemothership.com)"
+  ],
   "lint-staged": {
     "*.{js,css,md,jsx}": "prettier --write"
   },
